objects/Geographic_Info_Information__c.object
<CustomObject>
    <fields>
        <fullName>Audience_Search_Type__c</fullName>
        <label>Audience Search Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Geography By Boundary</fullName>
                </value>
                <value>
                    <fullName>Geography By Distance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBSA_Name__c</fullName>
        <formula>Geographic_Info__r.CBSA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBSA_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Geography By Boundary</relationshipLabel>
        <relationshipName>Geographic_Info_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Geographic_Info__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Geographic_Info__r.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Info__c</fullName>
        <label>Geographic Info</label>
        <referenceTo>Geographic__c</referenceTo>
        <relationshipLabel>Geographic Info Informations</relationshipLabel>
        <relationshipName>Geographic_Info_Informations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StateFIPS__c</fullName>
        <formula>TEXT(Geographic_Info__r.StateFIPS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StateFIPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Geographic_Info__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <formula>Geographic_Info__r.ZipCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZipCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>radius_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>radius flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>source</label>
        <type>Checkbox</type>
    </fields>
    <label>Geographic Info Information</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Geographic Info Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geographic Info Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>